# singularity

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
.cargo/: config.toml
singularity_model_builder/: Cargo.toml
singularity_model_builder/src/: download.rs  download_progress.rs  errors.rs  lib.rs
singularity_model_builder/src/build_model/: guff.rs  mod.rs
singularity_ui/: Cargo.toml  build.rs
singularity_ui/src/: error.rs  lib.rs  main.rs
singularity_ui/src/core/llm/: mod.rs
singularity_ui/src/core/llm/download/: linux.rs  macos.rs  mod.rs  windows.rs
singularity_ui/src/core/llm/install/: macos.rs
singularity_ui/src/core/llm/serve/: linux.rs  macos.rs  mod.rs  windows.rs
singularity_ui/src/core/llm/utils/: mod.rs  nvidia.rs
singularity_ui/ui/: app-window.slint
singularity_ui/ui/other/: confirm-download.slint
singularity_ui_ios/: Info.plist  build_for_ios_with_cargo.bash  project.yml
singularity_ui_ios/Singularity.xcodeproj/: project.pbxproj
