[workspace]
members = [
    "singularity_ui",
]
resolver = "2"

[workspace.dependencies]
dirs = { version = "6.0" }
tokio = { version = "1.48" }
thiserror = { version = "2.0" }
anyhow = { version = "1.0" }

[workspace.lints.rust]
rust_2021_idioms = "deny"
# missing_docs = "deny"
missing_debug_implementations = "deny" # opt out where Debug is really redundant
future_incompatible = "deny"
unsafe-code = "deny"
