[package]
name = "singularity_ui"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "POC for LLM Client"

[dependencies]
# Enable `gettext` feature if you need localization. Read about localizing slint apps here: https://docs.slint.dev/latest/docs/slint/guide/development/translations/
slint = { version = "1.14", features = [ "log", "backend-winit" ] }
env_logger = "0.11"
# dirs.workspace = true
# anyhow.workspace = true
# tokio = {workspace = true, features = [ "macros", "rt-multi-thread" ] }
# async-compat = "0.2"

[build-dependencies]
slint-build = "1.14"
