[package]
name = "singularity_ui"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "POC for LLM Client"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "singularity_ui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
# Enable `gettext` feature if you need localization. Read about localizing slint apps here: https://docs.slint.dev/latest/docs/slint/guide/development/translations/
slint = { version = "1.14", features = [
    "log",
    "backend-winit"
] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async
tokio = { workspace = true, features = ["rt-multi-thread", "process"] }
async-compat = "0.2"
futures-util = "0.3"

# Other
anyhow.workspace = true
thiserror.workspace = true
dirs.workspace = true
ollama-rs = "0.3.3"
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
    "stream",
] }

[target.'cfg(any(target_os = "linux", all(target_os = "macos", target_arch = "x86_64")))'.dependencies]
tar = "0.4"
flate2 = "1.1"

[target.'cfg(target_os = "windows")'.dependencies]
zip = "7.0"

[build-dependencies]
slint-build = "1.14"
